syntax = "proto3";
package houston.vo.webhook.github;

option java_package = "houston.vo.webhook.github";
option java_multiple_files = true;

// Issue 이벤트
message IssueEvent
{
  string action = 1;

  message User {
    string login = 1;
    int32 id = 2;
    string node_id = 3;
    string avatar_url = 4;
    string gravatar_id = 5;
    string url = 6;
    string html_url = 7;
    string followers_url = 8;
    string following_url = 9;
    string gists_url = 10;
    string starred_url = 11;
    string subscriptions_url = 12;
    string organizations_url = 13;
    string repos_url = 14;
    string events_url = 15;
    string received_events_url = 16;
    string type = 17;
    bool site_admin = 18;
  }

  message Label {
    int64 id = 1;
    string node_id = 2;
    string url = 3;
    string name = 4;
    string color = 5;
    bool default = 6;
    string description = 7;
  }

  message Reactions {
    string url = 1;
    int32 total_count = 2;
    int32 plus_one = 3; // "+1"
    int32 minus_one = 4; // "-1"
    int32 laugh = 5;
    int32 hooray = 6;
    int32 confused = 7;
    int32 heart = 8;
    int32 rocket = 9;
    int32 eyes = 10;
  }

  message Issue {
    string url = 1;
    string repository_url = 2;
    string labels_url = 3;
    string comments_url = 4;
    string events_url = 5;
    string html_url = 6;
    int64 id = 7;
    string node_id = 8;
    int32 number = 9;
    string title = 10;
    User user = 11;
    repeated Label labels = 12;
    string state = 13;
    bool locked = 14;
    User assignee = 15;
    repeated User assignees = 16;
    string milestone = 17; // optional
    int32 comments = 18;
    string created_at = 19;
    string updated_at = 20;
    string closed_at = 21; // optional
    string author_association = 22;
    string active_lock_reason = 23; // optional
    string body = 24; // optional
    Reactions reactions = 25;
    string timeline_url = 26;
    string performed_via_github_app = 27; // optional
    string state_reason = 28; // optional
  }

  message Repository {
    int64 id = 1;
    string node_id = 2;
    string name = 3;
    string full_name = 4;
    bool private = 5;
    User owner = 6;
    string html_url = 7;
    string description = 8; // optional
    bool fork = 9;
    string url = 10;
    string created_at = 11;
    string updated_at = 12;
    string pushed_at = 13;
    string git_url = 14;
    string ssh_url = 15;
    string clone_url = 16;
    string svn_url = 17;
    int32 size = 18;
    int32 stargazers_count = 19;
    int32 watchers_count = 20;
    string language = 21; // optional
    bool has_issues = 22;
    bool has_projects = 23;
    bool has_downloads = 24;
    bool has_wiki = 25;
    bool has_pages = 26;
    bool has_discussions = 27;
    int32 forks_count = 28;
    bool archived = 29;
    bool disabled = 30;
    int32 open_issues_count = 31;
    string license = 32; // optional
    bool allow_forking = 33;
    bool is_template = 34;
    bool web_commit_signoff_required = 35;
    string visibility = 36;
    int32 forks = 37;
    int32 open_issues = 38;
    int32 watchers = 39;
    string default_branch = 40;
  }

  User sender = 2;
  Issue issue = 3;
  Repository repository = 4;
}
