syntax = "proto3";
package houston.vo.webhook.github;

option java_package = "houston.vo.webhook.github";
option java_multiple_files = true;

// Push 이벤트
message PushEvent
{
  message Repository {
    message Owner {}

    string id = 1;
    string node_id = 2;
    string name = 3;
    string full_name = 4;
    bool private = 5;
    Owner owner = 6;
  }

  message Pusher {}

  message Sender
  {
    int64 id = 1;
  }

  string ref = 1;
  string before = 2;
  string after = 3;
  Repository repository = 4;
  Pusher pusher = 5;
  Sender sender = 6;
}
